--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build": "NODE_ENV=production sketch build",
     "format": "prettier --trailing-comma es5 --write 'src/**/*.js'",
-    "gen": "swagen sdk https://api.36node.com/auth/v0/openapi.yml",
+    "gen": "swagen sdk https://stargate.36node.com/api/auth/v0/openapi.yml",
     "lint": "sketch lint src",
     "release": "standard-version && git push --follow-tags origin master",
     "test": "NODE_ENV=test sketch test --env=node"
@@ -48,19 +48,19 @@
   },
   "dependencies": {
     "@36node/fetch": "^0.5.1",
-    "@36node/query-normalizr": "^0.2.1",
-    "commander": "^2.16.0"
+    "@36node/query-normalizr": "^0.4.0",
+    "commander": "^2.20.0"
   },
   "devDependencies": {
-    "@36node/eslint-config": "^0.4.0",
-    "@36node/sketch": "^0.7.4",
-    "@36node/swagen": "^0.11.0",
-    "@commitlint/cli": "^7.5.2",
-    "@commitlint/config-conventional": "^7.5.0",
+    "@36node/eslint-config": "^0.5.0",
+    "@36node/sketch": "^0.11.0",
+    "@36node/swagen": "^0.12.0",
+    "@commitlint/cli": "^7.6.1",
+    "@commitlint/config-conventional": "^7.6.0",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.1",
     "standard-version": "^5.0.2"
   },
   "gitHead": "8663c42b024e6ed66e3253178ac34f852c3d79e1"
