--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "scripts": {
     "build": "NODE_ENV=production sketch build",
     "format": "prettier --trailing-comma es5 --write 'src/**/*.js'",
-    "gen": "swagen sdk https://stargate.36node.com/api/auth/v0/openapi.yml",
+    "gen": "swagen sdk https://stargate.36node.com/api/auth/v0/openapi.yml && npm run format",
     "lint": "sketch lint src",
-    "release": "standard-version && git push --follow-tags origin master",
+    "release": "standard-version",
     "test": "NODE_ENV=test sketch test --env=node"
   },
   "commitlint": {
@@ -47,14 +47,14 @@
     ]
   },
   "dependencies": {
-    "@36node/fetch": "^0.5.1",
+    "@36node/fetch": "^0.6.0",
     "@36node/query-normalizr": "^0.4.0",
     "commander": "^2.20.0"
   },
   "devDependencies": {
-    "@36node/eslint-config": "^0.5.0",
-    "@36node/sketch": "^0.11.0",
-    "@36node/swagen": "^0.12.0",
+    "@36node/eslint-config": "^0.6.0",
+    "@36node/sketch": "^0.11.1",
+    "@36node/swagen": "^0.12.1",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
     "faker": "^4.1.0",
