--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build": "NODE_ENV=production sketch build",
     "format": "prettier --trailing-comma es5 --write 'src/**/*.js'",
-    "gen": "swagen sdk https://stargate.36node.com/api/auth/v0/openapi.yml && npm run format",
+    "gen": "swagen sdk https://api.stargate.36node.com/auth/v0/openapi.yml && npm run format",
     "lint": "sketch lint src",
     "release": "standard-version",
     "start": "bin/json-server.js",
@@ -54,8 +54,8 @@
   },
   "devDependencies": {
     "@36node/eslint-config": "^0.6.0",
-    "@36node/sketch": "^0.11.1",
-    "@36node/swagen": "^0.12.1",
+    "@36node/sketch": "^0.12.0",
+    "@36node/swagen": "^0.12.6",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
     "faker": "^4.1.0",
