--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "scripts": {
     "build": "NODE_ENV=production sketch build",
     "format": "prettier --trailing-comma es5 --write 'src/**/*.js'",
-    "gen": "swagen sdk https://api.stargate.36node.com/auth/v0/openapi.yml && npm run format",
+    "gen": "swagen sdk ../auth/openapi.yml && npm run format",
     "lint": "sketch lint src",
     "release": "standard-version",
-    "start": "bin/json-server.js",
+    "start": "bin/mock-server.js",
     "test": "NODE_ENV=test sketch test --env=node"
   },
   "commitlint": {
@@ -53,9 +53,10 @@
     "commander": "^2.20.0"
   },
   "devDependencies": {
+    "@36node/mock-server": "^0.0.7",
     "@36node/eslint-config": "^0.6.0",
     "@36node/sketch": "^0.12.0",
-    "@36node/swagen": "^0.12.6",
+    "@36node/swagen": "^0.13.2",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
     "faker": "^4.1.0",
