--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "NODE_ENV=production sketch build",
     "format": "prettier --trailing-comma es5 --write 'src/**/*.js'",
-    "gen": "swagen sdk https://api.stargate.36node.com/auth/v0/openapi.yml && npm run format",
+    "gen": "swagen sdk ../auth/openapi.yml && npm run format",
     "lint": "sketch lint src",
     "release": "standard-version",
     "start": "bin/mock-server.js",
@@ -56,7 +56,7 @@
   "devDependencies": {
     "@36node/eslint-config": "^0.6.4",
     "@36node/mock-server": "^0.0.9",
-    "@36node/sketch": "^0.13.27",
+    "@36node/sketch": "^0.15.2",
     "@36node/swagen": "^0.13.8",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
